upd: refactors tests paths